--- a/forwarder/main/templates/main/forwarder.html
+++ b/forwarder/main/templates/main/forwarder.html
@@ -14,10 +14,16 @@
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
       crossorigin="anonymous"
     />
+    <style>
+        .bg-custom {
+            background-color: #3333ff;
+        }
+
+    </style>
 </head>
 
 <body>
-<div class="navbar navbar-dark bg-primary shadow-sm">
+<div id="my_color" class="navbar navbar-dark bg-custom shadow-sm">
     <div class="container">
       <a href="#" class="navbar-brand d-flex align-items-center">
           <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" aria-hidden="true" class="me-2" viewBox="0 0 24 24" style="margin-right:5px"><path d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z"></path><circle cx="12" cy="13" r="4"></circle></svg>
@@ -55,8 +61,8 @@
                         {% endfor %}
                         <div class="row">
                         <div class="col-md-10 offset-md-1">
-                             <button type="submit" class="btn btn-primary btn-block">
-                                Send
+                             <button type="submit" class="btn bg-custom btn-block text-white">
+                                Submit
                              </button>
                         </div></div>
                     </form>
