--- a/forwarder/main/templates/main/forwarder.html
+++ b/forwarder/main/templates/main/forwarder.html
@@ -23,6 +23,7 @@
 </head>
 
 <body>
+
 <div id="my_color" class="navbar navbar-dark bg-custom shadow-sm">
     <div class="container">
       <a href="#" class="navbar-brand d-flex align-items-center">
@@ -71,5 +72,11 @@
     </div>
   </div>
 
+
+<footer class="footer mt-auto py-3 bg-light fixed-bottom text-center">
+  <div class="container">
+    <span class="text-muted">©{% now "Y" %} <a class="text-decoration-none" href="#" >Company Name</a></span>
+  </div>
+</footer>
 </body>
 </html>
